Fixed several responsive issues (width iphone-landscape, incorrect with smaller than 660px, improved alignment by adding width to header

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ h2 {
 
 /*Larger than 1024px*/
 @media screen and (min-width: 1024px) {
-  .wrapper {
+  .wrapper, .header {
     width: 780px;
   }
 
@@ -95,7 +95,7 @@ h2 {
 
 /*Between 780 and 1024px. Max width of image is 780*/
 @media screen and (max-width: 1024px) {
-  .wrapper {
+  .wrapper, .header {
     width: 768px;
   }
 
@@ -110,12 +110,12 @@ h2 {
 
 /*Between 660 and 780px*/
 @media screen and (min-width: 660px) and (max-width: 780px) {
-  .wrapper {
-    width: 655px;
+  .wrapper, .header {
+    width: 650px;
   }
 
   #anvil-image {
-    max-width: 655px;
+    max-width: 650px;
   }
 
   .header-nav a   {
@@ -125,7 +125,7 @@ h2 {
 
 /*Larger than 1024px*/
 @media screen and (max-width: 660px) {
-  .wrapper {
+  .wrapper, .header {
     width: 100%;
   }
 
